--- a/Example/NSJFontResizingUITextView/Base.lproj/Main.storyboard
+++ b/Example/NSJFontResizingUITextView/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9SY-dG-KrA">
-                                <rect key="frame" x="40" y="293" width="334" height="150"/>
+                                <rect key="frame" x="40" y="193" width="334" height="150"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="Kbm-PC-kRP"/>
@@ -36,7 +36,7 @@
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9SY-dG-KrA" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="DZz-JL-ntQ"/>
-                            <constraint firstItem="9SY-dG-KrA" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="SX8-eZ-mqH"/>
+                            <constraint firstItem="9SY-dG-KrA" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" constant="-100" id="SX8-eZ-mqH"/>
                             <constraint firstItem="9SY-dG-KrA" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="lvw-o9-h8H"/>
                             <constraint firstAttribute="trailingMargin" secondItem="9SY-dG-KrA" secondAttribute="trailing" constant="20" id="uPH-Wd-au8"/>
                         </constraints>
